Fix delete chat

BUG: 506687